# VRSecretary

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRODUCTION_REFACTOR_SUMMARY.md  README.md  docker-compose.backend.yml  pyproject.toml  start.ps1  start.sh  starts.bat
assets/avatars/scifi_girl_v01/: DOWNLOAD_INSTRUCTIONS.txt  README.md
backend/docker/: Dockerfile.gateway  docker-compose.dev.yml  env.example
backend/gateway/: .env.template  README.md  pyproject.toml
backend/gateway/tests/: test_vr_chat_api.py
backend/gateway/vrsecretary_gateway/: __init__.py  config copy.py  config.py  main.py
backend/gateway/vrsecretary_gateway/api/: health_router.py  vr_chat_router.py
backend/gateway/vrsecretary_gateway/llm/: base_client.py  ollama_client.py  watsonx_client.py
backend/gateway/vrsecretary_gateway/models/: chat_schemas.py  session_store.py
backend/gateway/vrsecretary_gateway/tts/: chatterbox_client copy.py  chatterbox_client.py
demo/: README.md  install.sh  install_windows.cmd  install_windows.ps1
docs/: architecture.md  deployment-guide.md  engine-agnostic-api.md  overview.md  persona-ailey.md  unreal-integration.md
engine-plugins/unity/: VRSecretary.Unity.csproj
engine-plugins/unity/Runtime/: VRSecretaryClient.cs
engine-plugins/unity/Runtime/Models/: ChatRequest.cs  ChatResponse.cs
engine-plugins/unreal/: VRSecretary.uplugin
engine-plugins/unreal/Source/VRSecretary/: VRSecretary.Build.cs
engine-plugins/unreal/Source/VRSecretary/Private/: VRSecretaryComponent.cpp  VRSecretaryModule.cpp
engine-plugins/unreal/Source/VRSecretary/Public/: VRSecretaryChatTypes.h  VRSecretaryComponent.h
engine-plugins/unreal/VRSecretary/: README.md  VRSecretary.uplugin
engine-plugins/unreal/VRSecretary/Source/VRSecretary/: VRSecretary.Build.cs
engine-plugins/unreal/VRSecretary/Source/VRSecretary/Private/: VRSecretaryComponent.cpp  VRSecretaryLog.cpp  VRSecretaryModule.cpp  VRSecretarySettings.cpp
engine-plugins/unreal/VRSecretary/Source/VRSecretary/Public/: VRSecretaryChatTypes.h  VRSecretaryComponent.h  VRSecretaryLog.h  VRSecretarySettings.h
examples/: test_voice.py  test_voice_multi.py
samples/VRSecretaryGame/: README.md  VRSecretaryGame.uproject
samples/VRSecretaryGame/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
samples/VRSecretaryGame/Content/: VRSecretary.umap
samples/VRSecretaryGame/Content/Fab/Elegant_Marble-Top_Executive_Desk/: M_Rock_Marble_Polished.uasset  M_Rock_Marble_Polished_BaseColor.uasset  M_Rock_Marble_Polished_Normal.uasset  M_Wood_Walnut.uasset  M_Wood_Walnut_MetallicRoughness.uasset  T_Wood_Walnut_Mat.uasset  black_main_ExecutiveDesk_83A29836.uasset  chrome_ExecutiveDesk_83A29836.uasset  executivedesk_83a298361.uasset
samples/VRSecretaryGame/Content/Fab/VR_Offıce/: 1_bh6601_1_face_vidro_transparente_001.uasset  AM109_008_EU_wood_color.uasset  AM109_008_EU_wood_color000.uasset  Abel_Black_Round_Wall_Mirror_48.uasset  Artboard_11.uasset  Artboard_151.uasset  Artboard_16.uasset  Artboard_17.uasset  Automotive_led_lights.uasset  Automotive_led_lights_001.uasset  BOLT.uasset  Base_Sp.uasset  Base_Sp_Glossiness.uasset  Base_Sp_Normal.uasset  Basic_glass.uasset  Black_plastic.uasset  Black_swirl_marble.uasset  Black_swirl_marble_001.uasset  Body.uasset  Bump.uasset  Caledonia_Gold_Polished_Porcelain.uasset  Caledonia_Gold_Polished_Porcelain_001.uasset  Caledonia_Gold_Polished_Porcelain_BaseColor.uasset  Caledonia_Gold_Polished_Porcelain_BaseColor1.uasset  Caledonia_Gold_Polished_Porcelain_Bump.uasset  Caledonia_Gold_Polished_Porcelain_Bump1.uasset  Caledonia_Gold_Polished_Porcelain_NormalBump_OpenGL.uasset  Caledonia_Gold_Polished_Porcelain_NormalBump_OpenGL1.uasset  Chrome_002.uasset  Color.uasset  DesertRoseSmallDiff.uasset  DesertRoseSmallTex.uasset  DesertRoseSmallTexture_Norm.uasset  DesertRoseSmallTexture_Spec.uasset  Desk_Black.uasset  Desk_Light.uasset  Desk_Metal.uasset  GROUND.uasset  GWC_Bronze_BaseColor.uasset  GWC_Bronze_Metallic-GWC_Bronze_Roughness.uasset  (+185 more)
samples/VRSecretaryGame/Content/ModernLivingRoom/Maps/: Main.umap
samples/VRSecretaryGame/Content/ModernLivingRoom/Materials/: M_Air.uasset  M_BirdDecoration.uasset  M_Branch.uasset  M_Candles.uasset  M_CandlesGlass.uasset  M_Carpet.uasset  M_Chaise-Longue.uasset  M_Chaise-LongueBase.uasset  M_Chest.uasset  M_Curtain.uasset  M_Dolphin.uasset  M_Door.uasset  M_DoubleSwitch.uasset  M_Drawers.uasset  M_Elephant.uasset  M_FloorLamp.uasset  M_GlassMaster.uasset  M_Globe.uasset  M_GlobeBase.uasset  M_Hourglass.uasset  M_HourglassGlass.uasset  M_Lamp.uasset  M_LampBase.uasset  M_Lights.uasset  M_LightsGlass.uasset  M_Master.uasset  M_Painting2.uasset  M_Paintings.uasset  M_Pillow1.uasset  M_Pillow2.uasset  M_Pillow3.uasset  M_Plant.uasset  M_PlantVase.uasset  M_Pouf.uasset  M_Shelves.uasset  M_Sofa.uasset  M_SofaBack.uasset  M_SofaBase.uasset  M_SofaSeats.uasset  M_StoneWall.uasset  (+10 more)
samples/VRSecretaryGame/Content/ModernLivingRoom/StaticMesh/Furniture/: SM_BirdDecoration.uasset  SM_Branch.uasset  SM_Candles.uasset  SM_Carpet.uasset  SM_Chaise-Longue.uasset  SM_Chaise-LongueBase.uasset  SM_Chest.uasset  SM_Curtain.uasset  SM_Dolphin.uasset  SM_Door.uasset  SM_DoubleSwitch.uasset  SM_Drawers.uasset  SM_Globe.uasset  (+27 more)
samples/VRSecretaryGame/Content/VRSecretaryGame/Maps/: MainMap.umap
samples/VRSecretaryGame/Plugins/VRSecretary/: README.md
samples/VRSecretaryGame/Source/: VRSecretaryGame.Target.cs  VRSecretaryGameEditor.Target.cs
samples/VRSecretaryGame/Source/VRSecretaryGame/: VRSecretaryGame.Build.cs  VRSecretaryGame.cpp
samples/unreal-vr-secretary-demo/: README.md  VRSecretaryDemo.uproject
scripts/: install_cuda.sh
scripts/windows/: install_cuda_win.ps1  install_python_win.ps1  install_uv_win.ps1  install_vsb_win.ps1
scripts/windows/older/: install_cuda_win.ps1
templates/: gui.html
tests/: vrsecretary_system_check.ipynb
tools/: README.md  vr_chatterbox_server.py  vr_chatterbox_server_multi.py
tools/perf/: load_test_vr_chat.k6.js  profiling_notes.md
tools/scripts/: install_unreal_helper.sh  start_local_stack.sh
(+133 files in other folders)
