[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vrsecretary"
version = "1.0.0"
description = "Production-ready AI-powered VR Secretary - Unreal Engine 5 VR with local/cloud LLMs and high-quality TTS"
# Chatterbox + Torch stack is tested on Python 3.11; avoid 3.12 for now
requires-python = ">=3.11,<3.13"

authors = [
  { name = "Ruslan Magana", email = "contact@ruslanmv.com" }
]

maintainers = [
  { name = "Ruslan Magana", email = "contact@ruslanmv.com" }
]

license = { text = "Apache-2.0" }

readme = "README.md"

keywords = [
  "vr",
  "virtual-reality",
  "ai",
  "llm",
  "ollama",
  "unreal-engine",
  "tts",
  "voice-synthesis",
  "jupyter",
  "vrsecretary",
  "chatbot",
  "conversational-ai"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "notebook>=7.2",                                  # modern Notebook
  "ipykernel>=6.29",
  "ollama>=0.6,<1.0",                               # pin to a stable client range

  # --- Added Dependencies for ASGI/Web Server ---
  "uvicorn[standard]>=0.38.0",
  "httptools>=0.7.1",
  "pydantic-settings",                              # correct package name
  # ----------------------------------------------

  # --- TTS stack: versions aligned with chatterbox-tts 0.1.4's ecosystem ---
  "numpy==1.25.2",                                  # within chatterbox-tts range >=1.24,<1.26
  "onnx==1.19.0",                                   # works with ml-dtypes 0.5.x
  "ml-dtypes==0.5.3",                               # exposes float4_e2m1fn, fixes your crash
  "chatterbox-tts==0.1.4",                          # your TTS engine
  "requests>=2.32.0",                               # HTTP client for TTS client GUI
  "pyaudio>=0.2.14",
  "simpleaudio>=1.0.4",                             # simple cross-platform audio playback

  # NOTE: torch / torchvision / torchaudio are provided in the optional "cuda" extra
  # so environments without CUDA don't get broken installs by default.
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.2",
]
lab = [
  "jupyterlab>=4.2",
]

# Install this extra when you *have* a CUDA GPU and want the Torch stack.
# CPU-only installs can ignore this.
#
# With uv + Makefile:
#   uv sync --extra cuda --extra dev --extra lab \
#     --extra-index-url https://download.pytorch.org/whl/cu126 \
#     --index-strategy unsafe-best-match
#
# With plain pip:
#   pip install ".[cuda]" --extra-index-url https://download.pytorch.org/whl/cu126
#
cuda = [
  "torch",
  "torchvision",
  "torchaudio",
]

[project.urls]
Homepage = "https://ruslanmv.com"
Documentation = "https://github.com/ruslanmv/VRSecretary/tree/main/docs"
Repository = "https://github.com/ruslanmv/VRSecretary"
Issues = "https://github.com/ruslanmv/VRSecretary/issues"
Changelog = "https://github.com/ruslanmv/VRSecretary/releases"
"Author Website" = "https://ruslanmv.com"

# Hatchling build configuration
[tool.hatchling.build.targets.wheel]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "W",   # pycodestyle warnings
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["vrsecretary_gateway"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.pytest.ini_options]
testpaths = ["backend/gateway/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

# ----------------- uv configuration -----------------
[tool.uv]
dev-dependencies = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
  "black>=24.0",
]

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy==1.25.2"]

# ----------------- mypy type checking ----------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "chatterbox_tts.*",
  "ollama.*",
  "simpleaudio.*",
  "pyaudio.*",
]
ignore_missing_imports = true

# ----------------- black formatting ------------------
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''