# ==============================================================================
# VRSecretary Gateway - Production-Ready pyproject.toml
# ==============================================================================
# FastAPI backend gateway for VRSecretary Unreal Engine plugin
# Supports Ollama (local), watsonx.ai (cloud), and Chatterbox TTS
#
# Author: Ruslan Magana (ruslanmv.com)
# License: Apache-2.0
# ==============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vrsecretary-gateway"
version = "1.0.0"
description = "Production-ready AI gateway for VRSecretary - FastAPI backend with Ollama, watsonx.ai, and Chatterbox TTS integration"
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "Apache-2.0" }

authors = [
  { name = "Ruslan Magana", email = "contact@ruslanmv.com" }
]

maintainers = [
  { name = "Ruslan Magana", email = "contact@ruslanmv.com" }
]

keywords = [
  "vrsecretary",
  "fastapi",
  "ai-gateway",
  "llm",
  "ollama",
  "watsonx",
  "tts",
  "unreal-engine",
  "vr",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "requests-mock>=1.12.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "black>=24.0.0",
  "httpx[http2]",
]

watsonx = [
  "ibm-watsonx-ai>=1.1.0",
  "ibm-cloud-sdk-core>=3.20.0",
]

all = [
  "vrsecretary-gateway[dev,watsonx]",
]

[project.urls]
Homepage = "https://ruslanmv.com"
Documentation = "https://github.com/ruslanmv/VRSecretary/tree/main/docs"
Repository = "https://github.com/ruslanmv/VRSecretary"
Issues = "https://github.com/ruslanmv/VRSecretary/issues"
Changelog = "https://github.com/ruslanmv/VRSecretary/releases"
"Author Website" = "https://ruslanmv.com"

# ==============================================================================
# Build Configuration (Hatchling)
# ==============================================================================

[tool.hatchling.build.targets.wheel]
packages = ["vrsecretary_gateway"]

[tool.hatchling.build.targets.sdist]
include = [
  "vrsecretary_gateway/",
  "tests/",
  "README.md",
  ".env.template",
]

# ==============================================================================
# Code Quality Tools
# ==============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["vrsecretary_gateway", "tests"]

select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "W",     # pycodestyle warnings
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "SIM",   # flake8-simplify
  "TCH",   # flake8-type-checking
  "TID",   # flake8-tidy-imports
  "ARG",   # flake8-unused-arguments
  "PL",    # pylint
  "RUF",   # ruff-specific rules
]

ignore = [
  "E501",    # line too long (handled by formatter)
  "B008",    # do not perform function calls in argument defaults
  "PLR0913", # too many arguments to function call
  "PLR2004", # magic value used in comparison
]

[tool.ruff.lint.isort]
known-first-party = ["vrsecretary_gateway"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["ARG001", "ARG002"]

# ==============================================================================
# Type Checking (mypy)
# ==============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "ollama.*",
  "ibm_watsonx_ai.*",
  "ibm_cloud_sdk_core.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ==============================================================================
# Code Formatting (black)
# ==============================================================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ==============================================================================
# Testing (pytest)
# ==============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Coverage options
addopts = [
  "--strict-markers",
  "--strict-config",
  "--verbose",
  "--tb=short",
  "--cov=vrsecretary_gateway",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]

markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]

filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["vrsecretary_gateway"]
omit = [
  "*/tests/*",
  "*/__init__.py",
  "*/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

# ==============================================================================
# UV Package Manager
# ==============================================================================

[tool.uv]
dev-dependencies = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
  "black>=24.0",
]
